2013-07-15  Charlie Zender  <zender@uci.edu>

	* sng_trm_trl_zro() trims trailing zeros

	* CDL mode works for non-char variables for attributes, dies for float attributes

2013-07-15 Pedro Vicente  <pvicente@uci.edu>

	* Add in_grp_3.cdl group data for ncwa testing

	* nco_var_get_trv() Fill-in variable structure for weighting variable "var_nm"

2013-07-12  Charlie Zender  <zender@uci.edu>

	* CDL mode for variable shape and attributes mostly works

	* NCO 4.3.3 release procedure:
 	Changes since nco-4_3_2: -X aux, ncflint/ncpdq -g -G --unn
	cd ~/nco;cvs tag -d nco-4_3_3;cvs tag -d nco-4_3_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.3 release"
	cvs tag -c nco-4_3_3;cvs tag -c nco-4_3_3-1

	* Implement CDL mode in variable header in nco_prn_var_dfn()

	* Fix printing so only extracted sub-groups show up

	* Remaining issues include self-consistent group flg_xtr, also broken with old method

2013-07-11  Charlie Zender  <zender@uci.edu>

	* Debian Mayhem project reported five bugs due to unsanitized input:
	716127 (ncflint), 716128 (ncap), 716129 (ncap2), 716506 (ncbo), and 716602 (ncecat)
	Each bug causes a core dump rather than a clean exit(EXIT_FAILURE)
	Fixed four of these by checking return values on strchr()
	ncap2 bug triggered _inside_ strtoul() so hard to fix

	* New indentation works well enough. Begin implementing CDL option.

	* Strip all tabs and extra vertical space, ready to design new indentation

	* New print format almost glitch-free, old format intact, regressions all pass

2013-07-10  Charlie Zender  <zender@uci.edu>

	* nco_grp_prn() prints variables by group, with OK formatting

	* Tidy ncbo.c, nco_grp_utl.c

	* Introduce print flag structure prn_sct prn_flg in ncks

2013-07-09  Charlie Zender  <zender@uci.edu>

	* netCDF3 stubs for nco_inq_grp_parent(), nco_inq_grp_parent_flg()
	return NC_ENOGRP rather than NC_NOERR or assert(0)

	* Eliminate nc_id argument to nco_prn_att()

	* First version of group-recursive printer nco_grp_prn()